# rattleBOT

./: .dockerignore  .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  SETUP.md  ai_provider.py  ai_tasks.py  client.py  config.py  extract_all_images.py  image_utils.py  main.py  pyproject.toml  reextract_all_named.py  requirements.txt  source_reader.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
.github/workflows/: ci.yml
api_reference/: endpoints.md  meta.json  openapi.json
content/: README.md
docs/: API_REFERENCE.md  PROMPT_TEMPLATES.md
examples/: README.md  extract_images.py  update_product.py  upload_option_images.py
rattle_api/: __init__.py  builder.py  client.py  config.py  knowledge.py  main.py  prompt_templates.py  provider.py  source.py  tasks.py
tests/: conftest.py  test_ai_provider.py  test_ai_tasks.py  test_builder.py  test_client.py  test_config.py  test_image.py  test_image_utils.py  test_knowledge.py  test_main.py  test_prompt_templates.py  test_provider.py  test_source.py  test_source_reader.py  test_tasks.py
tools/: extract_content.py  fetch_api_docs.py
