[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rattle-ai-workspace"
version = "0.1.0"
description = "Rattle AI Workspace — AI-agnostic rental data toolkit for the Rattle API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mngapps" },
]
keywords = ["rental", "api", "ai", "data-transformation", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all-ai = ["openai>=1.0", "anthropic>=0.30"]
images = ["Pillow>=10.0"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.5",
    "Pillow>=10.0",
]

[project.scripts]
rattle = "main:main"

[project.urls]
Homepage = "https://github.com/mngapps/rattle_api"
Documentation = "https://github.com/mngapps/rattle_api#readme"
Repository = "https://github.com/mngapps/rattle_api"
Issues = "https://github.com/mngapps/rattle_api/issues"
Changelog = "https://github.com/mngapps/rattle_api/blob/main/CHANGELOG.md"

[tool.setuptools]
py-modules = ["main", "config", "client", "ai_provider", "ai_tasks", "source_reader", "image_utils"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
