[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rattle-grimoire"
version = "0.1.0"
description = "rattleGRIMOIRE — the arcane spellbook of AI-powered product-data consulting for the Rattle API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "mngapps" },
]
keywords = [
    "rattle",
    "grimoire",
    "api",
    "ai",
    "ai-agents",
    "data-transformation",
    "cli",
    "datanorm",
    "eclass",
    "bmecat",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
    "openpyxl>=3.1",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.30"]
all-ai = ["openai>=1.0", "anthropic>=0.30"]
images = ["Pillow>=10.0"]
pdf = ["pymupdf>=1.24"]
docx = ["python-docx>=1.1"]
all-sources = ["pymupdf>=1.24", "python-docx>=1.1"]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "types-requests>=2.31",
    "pre-commit>=3.5",
    "Pillow>=10.0",
    "pymupdf>=1.24",
    "python-docx>=1.1",
]

[project.scripts]
rattle = "rattle_api.main:main"

[project.urls]
Homepage = "https://github.com/mngapps/rattleGRIMOIRE"
Documentation = "https://github.com/mngapps/rattleGRIMOIRE#readme"
Repository = "https://github.com/mngapps/rattleGRIMOIRE"
Issues = "https://github.com/mngapps/rattleGRIMOIRE/issues"
Changelog = "https://github.com/mngapps/rattleGRIMOIRE/blob/main/CHANGELOG.md"

[tool.setuptools.packages]
find = {}

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
